Add dev task to alias of default

--- a/src/cmake.toml
+++ b/src/cmake.toml
@@ -33,6 +33,9 @@ release ${args}
 '''
 
 [tasks.default]
+alias = "dev"
+
+[tasks.dev]
 clear = true
 description = "Default task points to the development testing flow"
 category = "Development"
