--- a/src/meson.toml
+++ b/src/meson.toml
@@ -1,98 +1,96 @@
 [config]
 skip_core_tasks = true
 
-
-[env.development]
-BUILDDIR = "./target/debug"
+[env]
+CARGO_MAKE_MESON_BUILDDIR = "./target/debug"
+CARGO_MAKE_MESON_BUILDTYPE = "debug"
+CARGO_MAKE_MESON_ARGS = "-Db_coverage=true"
 
 [env.production]
-BUILDDIR = "./target/release"
-
+CARGO_MAKE_MESON_BUILDDIR = "./target/release"
+CARGO_MAKE_MESON_BUILDTYPE = "release"
 
 [tasks.default]
 alias = "build"
 
-
-[tasks.setup-development]
-private = true
-condition = { files_not_exist = ["${BUILDDIR}/build.ninja"], profiles = ["development"] }
-command = "meson"
-args = ["setup", "-Db_coverage=true", "${BUILDDIR}"]
-
-[tasks.setup-production]
-private = true
-condition = { files_not_exist = ["${BUILDDIR}/build.ninja"], profiles = ["production"] }
-command = "meson"
-args = ["setup", "--buildtype=release", "-Db_coverage=true", "${BUILDDIR}"]
-
 [tasks.setup]
 private = true
-dependencies = ["clean_gcda"]
-run_task = { name = ["setup-development", "setup-production"], parallel = true }
-
+dependencies = ["clean-gcda"]
+condition = { files_not_exist = ["${CARGO_MAKE_MESON_BUILDDIR}/build.ninja"] }
+command = "meson"
+args = ["setup", "--buildtype=${CARGO_MAKE_MESON_BUILDTYPE}", "@@split(CARGO_MAKE_MESON_ARGS, )", "${CARGO_MAKE_MESON_BUILDDIR}"]
 
 [tasks.build]
 dependencies = ["setup"]
 command = "meson"
-args = ["compile", "-C", "${BUILDDIR}", "${@}"]
+args = ["compile", "-C", "${CARGO_MAKE_MESON_BUILDDIR}", "${@}"]
 
 [tasks.test]
 dependencies = ["setup"]
 command = "meson"
-args = ["test", "-C", "${BUILDDIR}", "-v", "${@}"]
+args = ["test", "-C", "${CARGO_MAKE_MESON_BUILDDIR}", "-v", "${@}"]
 
 [tasks.bench]
 dependencies = ["setup"]
 command = "meson"
-args = ["test", "-C", "${BUILDDIR}", "--benchmark", "-v", "${@}"]
-
+args = ["test", "-C", "${CARGO_MAKE_MESON_BUILDDIR}", "--benchmark", "-v", "${@}"]
 
 [tasks.linter]
 dependencies = ["build"]
 command = "ninja"
-args = ["-C", "${BUILDDIR}", "clang-tidy"]
-
+args = ["-C", "${CARGO_MAKE_MESON_BUILDDIR}", "clang-tidy"]
 
 [tasks.scan-build]
 dependencies = ["build"]
 command = "ninja"
-args = ["-C", "${BUILDDIR}", "scan-build"]
+args = ["-C", "${CARGO_MAKE_MESON_BUILDDIR}", "scan-build"]
 
 [tasks.scan-view]
 command = "scan-view"
 args = ["--allow-all-hosts", "--host", "0.0.0.0", "${@}"]
 
-
 [tasks.coverage]
 dependencies = ["test"]
 command = "ninja"
-args = ["-C", "${BUILDDIR}", "coverage-html"]
-
+args = ["-C", "${CARGO_MAKE_MESON_BUILDDIR}", "coverage-html"]
 
 [tasks.deps]
 dependencies = ["setup"]
 script_runner = "@duckscript"
 script = '''
-output = exec ninja -C ${BUILDDIR} -t graph
+output = exec --fail-on-error ninja -C ${CARGO_MAKE_MESON_BUILDDIR} -t graph
+if not eq ${output.code} "0"
+  echo ${output.stderr}
+  exit ${output.code}
+end
 writefile ./target/deps.dot ${output.stdout}
 '''
 
 [tasks.reconfigure]
 dependencies = ["setup"]
 command = "meson"
-args = ["setup", "--reconfigure", "${BUILDDIR}", "${@}"]
+args = ["setup", "--reconfigure", "${CARGO_MAKE_MESON_BUILDDIR}", "${@}"]
 
 [tasks.install]
 dependencies = ["setup"]
 command = "meson"
-args = ["install", "-C", "${BUILDDIR}", "${@}"]
+args = ["install", "-C", "${CARGO_MAKE_MESON_BUILDDIR}", "${@}"]
 
-[tasks.clean_gcda]
+[tasks.clean-gcda]
 script_runner = "@duckscript"
 script = '''
-build_dir = canonicalize ${BUILDDIR}
+build_dir = canonicalize ${CARGO_MAKE_MESON_BUILDDIR}
 gcda_files = glob_array ${build_dir}/**/*.gcda
 for path in ${gcda_files}
   rm ${path}
+end
+'''
+
+[tasks.install-meson]
+script_runner = "@duckscript"
+install_script = '''
+mesonpath = which meson
+if is_empty ${mesonpath}
+  pip3 install meson
 end
 '''
