--- a/src/cmake.toml
+++ b/src/cmake.toml
@@ -1,6 +1,8 @@
 
 [config]
 skip_core_tasks = true
+skip_rust_env_info = true
+skip_crate_env_info = true
 
 [tasks.setup-env]
 description = "Sets up environment variables."
